# git-loopy

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  BRIEF.md  CONTEXT.md  README.md
.github/features/: FEATURE-REQUESTS.md
.github/workflows/: native-orchestrator-smoke.yml  runner-family-gate.yml  (+1 more)
.scratch/: debug-pagination.sh
copiloop/: afk.sh
docs/: concepts.md  continuation-contract.md  customization.md  runners.md  skills-setup.md  workflow.md  wrapper-contract.md
git-loopy/: PROMPT.md  config.toml
ralph/: afk.sh  grill.sh  prompt.md  py-afk.sh  sh-afk.sh
ralph/python/: README.md  pyproject.toml
ralph/python/ralph_afk/: __init__.py  cli.py  config.py  emit.py  events.py  gate.py  gh.py  git.py  loop.py  pricing.py  pricing.toml  session.py  sinks.py  sources.py  worktree.py  wrapper.py
ralph/python/ralph_afk/interactive/: app.py  detect.py  driver.py  state.py
ralph/python/ralph_afk/telemetry/: otel.py
ralph/python/ralph_afk/ui/: renderer.py
ralph/python/tests/: fakes.py  test_cli_interactive.py  test_cli_parallel.py  test_cli_reasoning_effort.py  test_close_keyword_parity.py  test_config.py  test_emit.py  test_events.py  test_fakes.py  test_gate.py  test_gh.py  test_git.py  test_interactive_app.py  test_interactive_detect.py  test_interactive_driver.py  test_interactive_ledger.py  test_interactive_log.py  test_interactive_queue.py  test_interactive_state.py  test_interactive_transcript.py  test_iteration_end_to_end.py  test_loop_interactive.py  test_loop_parallel.py  test_pricing.py  test_session.py  test_sinks.py  test_smoke.py  test_sources.py  test_ui_smoke.py  test_worktree.py  test_wrapper.py
templates/: AGENTS.template.md  BRIEF.template.md
(+365 files in other folders)
