[project]
name = "ralph-afk"
version = "0.0.1"
description = "Autonomous AFK loop on the GitHub Copilot Python SDK — peer variant of ralph/sh-afk.sh."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "github-copilot-ralph-starter-kit contributors" }]
keywords = ["github-copilot", "afk", "autonomous", "agent", "ralph"]

# Runtime deps. The SDK is pinned to an exact PyPI version: the upstream
# `github-copilot-sdk` is documented as "public preview" and "may change in
# breaking ways" (see PRD #1, "Further Notes"), so future slices should bump
# this pin deliberately rather than tracking `main`.
#
# Rich is the renderer for the Python variant's terminal experience
# (streaming prints + frozen iteration Panels + a frozen run-end Table).
dependencies = [
    "github-copilot-sdk==0.3.0",
    "rich>=13.7.0,<14",
]

[project.optional-dependencies]
# Optional OpenTelemetry export. Off by default so the base install stays
# light. Operators who run an OTel collector flip it on by either setting
# OTEL_EXPORTER_OTLP_ENDPOINT or RALPH_OTEL_ENABLED=1 — see issue #12.
otel = [
    "opentelemetry-api>=1.20,<2",
    "opentelemetry-sdk>=1.20,<2",
    "opentelemetry-exporter-otlp>=1.20,<2",
]

[project.scripts]
ralph-afk = "ralph_afk.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ralph_afk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
